--- a/app/assets/stylesheets/vacation_requests.scss
+++ b/app/assets/stylesheets/vacation_requests.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the vacation_requests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+span.badge.badge-warning {
+  margin: 0 0 5px 5px;
+  font-size: 90%;
+}
