--- a/app/views/vacation_requests/index.slim
+++ b/app/views/vacation_requests/index.slim
@@ -1,7 +1,14 @@
-h2 = t('vacation_request.index.h2')
+.row
+  .col-md-5
+    h2= t('vacation_request.index.h2')
+
+  .col-md-7
+    span.badge.badge-warning= "#{t('employee.table.th.vacation_days')}: #{current_employee.vacation_days}"
+    span.badge.badge-warning= "#{t('employee.table.th.taken_vacation_days')}: #{current_employee.taken_vacation_days.to_f}"
+    = link_to t('vacation_request.index.new_vacation_request'), new_vacation_request_path, class: 'btn btn-primary float-right'
 
 - if @requests.any?
-  = render 'requests_table'
+  = render 'vacation_requests_table'
 - else
   span.alert.alert-warning
     = t('vacation_request.index.none')
