--- a/app/views/employees/_employee.slim
+++ b/app/views/employees/_employee.slim
@@ -1,12 +1,13 @@
 tr
-  td width="5%"= employee_counter + 1
-  td width="20%"= employee.name
-  td width="20%"= employee.email
-  td width="10%"= employee.vacation_days
-  td width="5%"= employee.taken_vacation_days
-  td width="5%"= employee.vacation_requests_count
-  td width="5%"= employee.supervisor
-  td width="5%"= link_to t('misc.edit'), edit_employee_path(employee.model), class: 'btn btn-secondary'
-  td width="5%"= link_to t('misc.delete'), employee_path(employee.model), method: :delete,
+  td width="5%" data-label="#" = employee_counter + 1
+  td width="20%" data-label=(t('employee.table.th.name')) = employee.name
+  td width="20%" data-label=(t('employee.table.th.email')) = employee.email
+  td width="10%" data-label=(t('employee.table.th.vacation_days')) = employee.vacation_days
+  td width="5%" data-label=(t('employee.table.th.taken_vacation_days')) = employee.taken_vacation_days
+  td width="5%" data-label=(t('employee.table.th.vacation_requests')) = employee.vacation_requests_count
+  td width="5%" data-label=(t('employee.table.th.supervisor')) = employee.supervisor
+
+  td data-label="" width="5%" = link_to t('misc.edit'), edit_employee_path(employee.model), class: 'btn btn-primary'
+  td data-label="" width="5%" = link_to t('misc.delete'), employee_path(employee.model), method: :delete,
     data: { confirm: t('employee.destroy.confirm', name: employee.name) },
     class: 'btn btn-danger'
