--- a/app/views/employees/_form.slim
+++ b/app/views/employees/_form.slim
@@ -8,8 +8,8 @@
 
   - errors = @form.errors&.messages.try(:[], :supervisor).presence
   div class=("form-group row#{' has-danger' if errors}")
-    = f.label :supervisor, class: 'col-sm-3 form-check-label'
-    .col-sm-9
+    = f.label :supervisor, class: 'col-3 form-check-label'
+    .col-9
       div class=("form-check#{' has-danger' if errors}")
         .form-check-label
           = f.check_box :supervisor, class: 'form-check-input'
